--- a/routing/pages/Explorer/template.html
+++ b/routing/pages/Explorer/template.html
@@ -1,5 +1,5 @@
 <self>
-  <div class="panels" :v-for="panel of this.panels">
+  <div class="panels" @for="panel of this.panels">
     <div class="panel">
       <header>
         <h4>{{ panel.title }}</h4>
