--- a/fields/Field/template.html
+++ b/fields/Field/template.html
@@ -1,24 +1,24 @@
 <super 
-  :class.required="this.state.@required"
-  :class.empty="!this.state.@value"
-  :class.disabled="this.state.@disabled"
-  :class.hidden="this.state.@hidden"
-  class="field">
+  :class.required="this.@state?.@required"
+  :class.empty="!this.@state?.@value"
+  :class.disabled="this.@state?.@disabled"
+  :class.hidden="this.@state?.@hidden"
+  :class="'field'">
   <header slot="header">
-    <label :style.display="this.state.property.name ? null : 'none'">
-      {{this.state.property.name || ''}}
+    <label :class.hide="!this.@state?.property.name">
+      {{this.@state?.property.name || ''}}
     </label>
   </header>
 
   <div class="main" slot="main"></div>
   <div
     class="errors"
-    :v-for="error of this.state.@errors"
-    :style.display="this.@touched === true ? null : 'none'">
+    @for="error of this.@state?.@errors"
+    :class.hide="!this.@touched">
       <div class="error">{{error}}</div>
   </div>
-  <div class="messages" :v-for="message of this.state.@messages">
-    <div class="message" :on-click="this.state.messages.tryRemove(message)">
+  <div class="messages" @for="message of this.@state?.@messages">
+    <div class="message" :on-click="this.@state?.messages.tryRemove(message)">
       {{message.text}}
     </div>
   </div>
