--- a/routing/pages/Explorer/panels/ExplorerModelPanel/template.html
+++ b/routing/pages/Explorer/panels/ExplorerModelPanel/template.html
@@ -1,5 +1,5 @@
 <self>
-  <div class="properties" :v-for="property of this.properties">
+  <div class="properties" @for="property of this.properties">
     <div class="property" :on-click="this.openProperty(property)">
       <label>{{ property.name }}</label>
     </div>
